package com.umeng.ufp.core.domain.protobuf;

option java_package = "com.umeng.ufp.core.domain.protobuf";
option java_outer_classname = "AdProtos";

message AdEntry {
    optional int32 id = 1;
    optional int32 ad_order_id = 2;
    optional string name = 3;
    optional string platform = 4;
    optional int32 prior = 5;
    optional string budget = 6;
    optional double budget_limit = 7;
    optional string price_type = 8;
    optional double cost_price = 9;
    optional int64 start_time = 10;
    optional int64 end_time = 11;
    optional string channels = 12;
    optional string areas = 13;
    optional string networks = 14;
    optional string status = 15;
}
